Minor additions and optimizations * Added Project link and Scroll to Top btns to home page * Prevent <Link>s from scrolling to bottom of rendered routes * Adjusted some skill proficiencies and added new category * Removed unneeded useEffect * Removed unnecessary comments * Added canonical URLs and meta descriptions * Hide top nav once main page content has reached top of viewport to avoid showing empty gap on top * Globally style links * Minor fixes to types * Removed duplicate instances of certain content wrappers * Decomposed Bio into sections * Styled Related Courses in Education home section

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -15,10 +15,8 @@
     width: 50%;
     display: flex;
     flex-direction: column;
-    /* flex-grow: 1; */
     padding: 0;
     margin: 0;
-    /* flex-direction: row; */
     justify-content: center;
     align-items: center;
     background-color: var(--color-background);
@@ -33,7 +31,7 @@
     justify-content: center;
     align-items: flex-start;
     flex-grow: 1;
-    flex-shrink: 1;
+    flex-shrink: 0;
 }
 
 .bg {
@@ -45,15 +43,32 @@
     background-attachment: fixed;
 }
 
-@media screen and (max-width: 768px) {
+.sectionTitle {
+    margin-top: 0;
+}
+
+.scrollToTop {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 100;
+    background-color: var(--color-background);
+    color: var(--color-text-primary);
+    border: none;
+    border-radius: 50%;
+    padding: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+@media screen and (max-width: 800px) {
     .homeSection {
         width: 75%;
     }
     
-    /* TODO: Hide background on tablets? */
-/*     .bg {
-        display: none;
-    } */
+    .homeSectionContent {
+        margin: 10% 0;
+    }
 }
 
 @media screen and (max-width: 576px) {
