--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -6,7 +6,7 @@
     gap: 1rem;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
     .projectsGrid {
         gap: 0.15rem;
         margin: 0;
