--- a/src/styles/ToggleThemeButton.module.css
+++ b/src/styles/ToggleThemeButton.module.css
@@ -1,8 +1,9 @@
 .toggleThemeButton {
     height: 100%;
-    width: 100%;
+    width: 50%;
     border: none;
-    /* TODO: background-color: var(--color-accent); */
+    border-left: 1px solid var(--color-accent);
+    background-color: var(--color-accent-2);
     color: #FFFFFF;
     overflow: hidden;
     transition: background-color 0.2s ease;
@@ -10,5 +11,11 @@
 }
 
 .toggleThemeButton:hover {
-    /* background-color: var(--color-accent-2); */
+    background-color: var(--color-accent);
+}
+
+@media screen and (max-width: 800px) {
+    .toggleThemeButton {
+        border-top: 1px solid var(--color-accent);
+    }
 }
